upgrade to Angular 14, replace ion-slides with swiper@8 on designsystem.page

--- a/src/global.scss
+++ b/src/global.scss
@@ -19,7 +19,9 @@
 @import "~quill/dist/quill.snow.css";
 
 // http://ionicframework.com/docs/v2/theming/
-
+@import "swiper/scss";
+@import "swiper/scss/navigation";
+@import "swiper/scss/pagination";
 
 // App Global Sass
 // --------------------------------------------------
