--- a/src/app/pages/manage/designsystem/designsystem.page.scss
+++ b/src/app/pages/manage/designsystem/designsystem.page.scss
@@ -79,8 +79,23 @@ app-designsystem {
   }
 
   .program-slides {
-    padding: 10px 0;
+    padding: 10px 5px;
     background-color: transparent;
+
+    //margin-top: 20px;
+    .swiper-container {
+      height: 100%;
+    }
+    .swiper-slide {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .swiper-wrapper {
+      align-items: center;
+    }
   }
 
   .program-slide {
